retactor : update Dto 필드명 변경 및 관련 메소드 리팩토링
