# src/main/java/com/sprint/mission/discodeit/dto/userstatus/UserStatusUpdateRequest.java
@@ -1,11 +1,12 @@
 package com.sprint.mission.discodeit.dto.userstatus;
 
+import java.time.Instant;
 import lombok.NonNull;
 
 import java.util.UUID;
 
 public record UserStatusUpdateRequest(
-        UUID id,
-        UUID userId
+    Instant newLastActiveAt
 ) {
+
 }
